# iutirla-hcm

./: database.dbml  organization-manual.md  performance.md  repomix-output-backend.xml  repomix-output.xml  repomix.config.json
backend/: .gitignore  cleanup_positions.py  cleanup_resources.py  create_ats_test_data.py  create_education_data.py  db.sqlite3  debug_positions.py  debug_search_logic.py  expand_fixtures.py  generate_complete_org_fixtures.py  generate_org_fixtures.py  migrate_manager_data.py  populate_education_data.py  pyproject.toml  reproduce_accent_search.py  test_api.py  verify_address_formatting.py  verify_custom_error.py  verify_lesson_files.py  verify_phrase_search.py  verify_refactor.py  verify_restored_field.py  verify_unique_language.py
backend/accounts/: admin.py  models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/ats/: admin.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py  views_options.py
backend/config/: settings.py  urls.py
backend/core/: admin.py  apps.py  db_utils.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/employment/: admin.py  models.py  serializers.py  urls.py  views.py
backend/organization/: admin.py  models.py  serializers.py  urls.py  views.py
backend/performance/: admin.py  models.py  serializers.py  urls.py  views.py
backend/talent/: admin.py  models.py  serializers.py  urls.py  views.py
backend/training/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
(+336 files in other folders)
